--- a/GeoAdsPlatform/Web.config
+++ b/GeoAdsPlatform/Web.config
@@ -5,13 +5,8 @@
   -->
 
 <configuration>
-  <connectionStrings>
-    <add name="ApplicationServices"
-         connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
-         providerName="System.Data.SqlClient" />
-  </connectionStrings>
-
   <appSettings>
+    <add key="ConnectionString" value="Server=localhost;Port=5433;Database=geoads;User Id=postgres;Password=silviul1987;Protocol=3" />
     <add key="webpages:Version" value="1.0.0.0"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
