- [ADD] Support for CORS
- [ADD] Support for getting ad based on location

--- a/GeoAdsPlatform/Web.config
+++ b/GeoAdsPlatform/Web.config
@@ -12,6 +12,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
 
+  <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+      </customHeaders>
+    </httpProtocol>
+  </system.webServer>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
