--- a/GeoAdsPlatform/Web.config
+++ b/GeoAdsPlatform/Web.config
@@ -31,8 +31,8 @@
       </assemblies>
     </compilation>
 
-    <authentication mode="Forms">
-      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+    <authentication mode="None">
+      <forms loginUrl="~/login" timeout="2880"  />
     </authentication>
 
     <membership>
