--- a/GeoAdsPlatform/Web.config
+++ b/GeoAdsPlatform/Web.config
@@ -21,6 +21,9 @@
   </system.webServer>
   
   <system.web>
+
+    <sessionState cookieless="false" timeout="15" mode="InProc"/>
+    
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
